Revision history for Perl extension BZ::Client.

Pending
    - Implement the api_key properly
    - Bug.pm: handle alias() better (i.e. properly)
    - Replace use+@ISA with 'use parent'

2.0_001 Thursday Sep 17 10:42:00 2015
    - let's make this thing sane....
    - lots and lots of pod improvements
    - wantarray sensitivity all around the place
    - Bug.pm: add fields() function
    - XMLRPC.pm: dispatch table used rather than by if/elsif/else
    - XMLRPC.pm: replace 'use constants' and make singleton-ish
    - XMLRPC.pm: 'use' rather than 'require'
    - XMLRPC.pm: use HTTP::Tiny instead of LWP
    - Client.pm: use HTTP::CookieJar instead of HTTP::Cookies
    - Client.pm: make logout() work better
    - Bug.pm: add update_see_also() and update_tags() functions

1.072 Wednesday Sep 09 23:44:00 2015
    - Add Users.pm
    - Pod in various places

1.071 Monday Sep 07 13:21:00 2015
    - Improve/fix logout() and login() functions
    - t/write-config.pl will help you write a config file to run tests against a real bugzilla server

1.07 Friday Sep 04 15:58:00 2015
    - BZ::Client::logger protects its input
    - Add pod for more methods in BZ/Client.pm
    - Add autologin option for RT91184
    - Add support for token based logins used in bz4.4.3+ (bugzilla 5.0 now works)
    - Expose control of the restrict_login option via new()
    - Tweak some tests

1.064 Fri Sep 04 11:57 2015
    - BZ::Client::Test if it cant find a config file, it blesses a hash-ref rather than trying (and failing) to bless a scalar

1.063 Thu Sep 03 21:48:00 2015
    - Make PodWeaver do stuff
    - Strip out subroutine prototypes
    - Strip out $VERSION's so dzil can do it
    - Whitespace fixes all over
    - Use dist::zilla
    - Lots and lots of pod and tiny code style tweaks

1.061 Wed Apr 22 13:43:00 2015

    - Fix for RT103873
    - BZ::Client::Bugs - now uses wantarray

1.06 Thu Dec 12 14:06:00 2013